--- a/css/main.scss
+++ b/css/main.scss
@@ -38,4 +38,4 @@ $on-laptop:        800px;
 // Import partials from the `minima` theme.
 
 @import "minima";
-@import "paper.min.css";
+@import "./paper.min.css";
