--- a/css/creative.css
+++ b/css/creative.css
@@ -31,7 +31,7 @@ a {
 }
 
 a:hover {
-  color: #f05f40;
+  color: #F05F40;
 }
 
 h1,
@@ -106,7 +106,7 @@ img::-moz-selection {
 }
 
 #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
-  color: #f05f40;
+  color: #F05F40;
 }
 
 #mainNav .navbar-nav > li.nav-item > a.nav-link,
@@ -163,7 +163,7 @@ img::-moz-selection {
     color: #F05F40;
   }
   #mainNav.navbar-shrink .navbar-brand:focus, #mainNav.navbar-shrink .navbar-brand:hover {
-    color: #f05f40;
+    color: #F05F40;
   }
   #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link,
   #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:focus {
