--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,12 +8,6 @@
 	<meta name="description" content="{% if page.excerpt %}{{page.excerpt}}{% else %}{{site.tagline}}{% endif %}">
 	<link rel="icon" type="image/png" href="/favicon.png">
 	
-	<!-- Google+ -->
-	<link rel="publisher" href="https://plus.google.com/{{site.googleplus}}"/>
-	<meta itemprop="name" content="{% if page.fulltitle %}{{page.fulltitle}}{% else %}{{page.title}} | {{ site.title }} {% endif %}">
-	<meta itemprop="description" content="{% if page.excerpt %}{{page.excerpt}}{% else %}{{site.tagline}}{% endif %}">
-	<meta itemprop="image" content="{% if page.image %}{{site.url}}{{page.image}}{% else %}{{site.url}}{{site.socialimg}}{% endif %}">
-	
 	<!-- Facebook -->
 	<meta property="og:type" content="website"/>
 	<meta property="og:title" content="{% if page.fulltitle %}{{page.fulltitle}}{% else %}{{page.title}} | {{ site.title }} {% endif %}"/>
@@ -21,21 +15,21 @@
 	<meta property="og:image" content="{% if page.image %}{{site.url}}{{page.image}}{% else %}{{site.url}}{{site.socialimg}}{% endif %}"/>
 	<meta property="og:url" content="{{site.url}}{{page.url}}"/>
 	<meta property="og:site_name" content="{{ site.title }} "/>
-	
-	<!-- Twitter -->
-	<meta name="twitter:card" content="summary">
-	<meta name="twitter:title" content="{% if page.fulltitle %}{{page.fulltitle}}{% else %}{{page.title}} | {{ site.title }} {% endif %}">
-	<meta name="twitter:description" content="{% if page.excerpt %}{{page.excerpt}}{% else %}{{site.tagline}}{% endif %}">
-	<meta name="twitter:image" content="{{site.url}}{{site.socialimg}}">
-	<meta name="twitter:url" content="{{site.url}}{{page.url}}">
 
-	<!-- JQuery Files -->
-	<script src="http://code.jquery.com/jquery.min.js"></script>
 	
-	<!-- CSS & fonts -->
-	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" media="(max-width: 640px)" href="css/main-mobile.css">
-	<link rel="stylesheet" media="(min-width: 640px)" href="css/main-labtop.css">
-	<!-- Put your fonts here -->
+    <!-- Bootstrap core CSS -->
+	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    
+    <!-- Fonts -->
+    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,300,400,500,700,900&amp;subset=korean" rel="stylesheet">
+
+    <!-- Plugin CSS -->
+	<link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
+    
+    <!-- Creative Theme CSS -->
+    <link href="css/creative.css" rel="stylesheet">
 
 </head>
