--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,6 @@
 <!-- Navigation -->
+<!-- collection requires: enable, sequence, href, nav-text -->
+
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">{{site.tite}}</a>
@@ -8,11 +10,11 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
 
-                {% for section in ordered_sections %}
-                    {% if section.enable %}
+                {% for nav in nav_collections %}
+                    {% if nav.enable %}
                         
                         <li class="nav-item">
-                            <a class="nav-link js-scroll-trigger" href="#{{section.href}}">{{section.nav-text}}</a>
+                            <a class="nav-link js-scroll-trigger" href="#{{nav.href}}">{{nav.nav-text}}</a>
                         </li>
 
                     {% endif %}
