--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,11 +3,15 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js">
+<html class="no-js" lang="ko">
 <!--<![endif]-->
 
-{% include head.html %}
-	
+	<head>
+		{% include head.html %}
+
+		
+	</head>
+
 	<body>
 		<!--[if lt IE 8]>
 		<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -16,5 +20,8 @@
 		{{ content }}
 		
 	</body>
+
+{% include footer.html %}
+
 </html>
 
