Add homepage's color themes

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -9,6 +9,7 @@
 	<head>
 		{% include head.html %}
 
+		<link href="css/homepage/color-theme-{{site.color-theme}}.css" rel="stylesheet">
 		<link href="css/homepage/global.css" rel="stylesheet">
 		<link media="(max-width: 640px)" href="css/homepage/mobile.css" rel="stylesheet">
 		<link media="(min-width: 640px)" href="css/homepage/labtop.css" rel="stylesheet">
