Resize homepage-front image

--- a/css/homepage/labtop.css
+++ b/css/homepage/labtop.css
@@ -1,3 +1,10 @@
+/* Header */
+@media (max-width: 1930px) {
+    header.masthead {
+        background-image: url("/img/front-1920px.jpg");
+    }
+}
+
 /* Buttons */
 .btn-xl {
     padding: 1rem 3rem;
