create intro page & competition tab

--- a/_layouts/history.html
+++ b/_layouts/history.html
@@ -9,17 +9,9 @@
 	<head>
 		{% include head.html %}
 
-		<!-- Bootstrap core CSS -->
-		<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-		<!-- Plugin CSS -->
-		<link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
-
-		<link href="css/creative.css" rel="stylesheet">
-
-		<link href="css/homepage/color-theme-{{site.color-theme}}.css" rel="stylesheet">
-		<link href="css/homepage/global.css" rel="stylesheet">
-		<link media="(max-width: 640px)" href="css/homepage/mobile.css" rel="stylesheet">
-		<link media="(min-width: 640px)" href="css/homepage/labtop.css" rel="stylesheet">
+		<link href="../css/history/global.css" rel="stylesheet">
+		<link media="(max-width: 640px)" href="../css/history/mobile.css" rel="stylesheet">
+		<link media="(min-width: 640px)" href="../css/history/labtop.css" rel="stylesheet">
 	</head>
 
 	<body>
@@ -32,7 +24,7 @@
 	</body>
 
 {% include footer.html %}
-<script src="js/homepage.js"></script>
+<script src="../js/history.js"></script>
 
 </html>
 
