--- a/_layouts/history.html
+++ b/_layouts/history.html
@@ -9,6 +9,8 @@
 	<head>
 		{% include head.html %}
 
+		<link href="../css/fancy-inputs.css" rel="stylesheet">
+		
 		<link href="../css/history/global.css" rel="stylesheet">
 		<link media="(max-width: 640px)" href="../css/history/mobile.css" rel="stylesheet">
 		<link media="(min-width: 640px)" href="../css/history/labtop.css" rel="stylesheet">
