--- a/_layouts/history.html
+++ b/_layouts/history.html
@@ -11,6 +11,7 @@
 
 		<link href="../css/fancy-inputs.css" rel="stylesheet">
 		
+		<link href="../css/history/navigation.css" rel="stylesheet">
 		<link href="../css/history/global.css" rel="stylesheet">
 		<link media="(max-width: 640px)" href="../css/history/mobile.css" rel="stylesheet">
 		<link media="(min-width: 640px)" href="../css/history/labtop.css" rel="stylesheet">
