--- a/css/fancy-inputs.css
+++ b/css/fancy-inputs.css
@@ -27,7 +27,8 @@ label::before {
     display: block;
     width: 16px;
     height: 16px;
-    border: 2px solid #8e44ad;
+	/* border: 2px solid #8e44ad; */
+	border: 2px solid #F81894;
     border-radius: 4px;
     z-index: -1;
 }
@@ -45,7 +46,8 @@ input[type="radio"]:checked + label::before {
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background: #8e44ad;
+	/* background: #8e44ad; */
+	background: #F81894;
 }
 /* Transition */
 label,
