검색엔진 최적화 및 이스터에그 끼워넣기

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,3 +10,8 @@
 <!-- Custom JavaScript -->
 <script src="js/creative.js"></script>
 <script src="js/default.js"></script>
+<!---
+
+<del>크롬 개발자 도구를 켜서 콘솔화면을 봐주세요</del>
+
+--->
