--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,19 +24,19 @@
 	<meta property="og:site_name" content="{{ site.title }} "/>
 	
 	<!-- Twitter -->
-	<!--
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:title" content="{% if page.fulltitle %}{{page.fulltitle}}{% else %}{{page.title}} | {{ site.title }} {% endif %}">
 	<meta name="twitter:description" content="{% if page.excerpt %}{{page.excerpt}}{% else %}{{site.tagline}}{% endif %}">
 	<meta name="twitter:image" content="{{site.url}}{{site.socialimg}}">
 	<meta name="twitter:url" content="{{site.url}}{{page.url}}">
-	-->
 
-    
+	<!-- Exposing to google search --->
+	<meta name="google-site-verification" content="VmxyeWsSqcEh9Ks_Nw43iaxsuJxrPlLVNlDEJWzucaU" />
+
     <!-- Fonts -->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,300,400,500,700,900&amp;subset=korean" rel="stylesheet">
 
-    
+	<script src="js/eastereggs.js"></script>
