--- a/css/creative.css
+++ b/css/creative.css
@@ -317,3 +317,17 @@ header.masthead p {
   -webkit-box-shadow: 0 0 0 0.2rem rgba(240, 95, 64, 0.5) !important;
   box-shadow: 0 0 0 0.2rem rgba(240, 95, 64, 0.5) !important;
 }
+
+a.portfolio-box {
+  max-width: 100%;
+  max-height: 100%;
+  width: 100%;
+  height: 100%;
+}
+
+.img-fluid {
+  max-width: 100%;
+  max-height: 100%;
+  height: inherit;
+}
+
