--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,7 @@
 	<!-- Plain Description -->
 	<title>{{ site.title }}</title>
 	<meta name="description" content="{% if page.excerpt %}{{page.excerpt}}{% else %}{{site.tagline}}{% endif %}">
+	<meta name="format-detection" content="telephone=no"/>
 	<link rel="icon" type="image/png" href="/favicon.png">
 	
 	<!-- Google+ -->
