--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,19 @@
 <!-- Custom JavaScript -->
 <script src="js/creative.js"></script>
 <script src="js/default.js"></script>
+
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-134595852-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-134595852-1');
+</script>
+
+
 <!---
 
 <del>크롬 개발자 도구를 켜서 콘솔화면을 봐주세요</del>
