--- a/css/faq/chatroom.css
+++ b/css/faq/chatroom.css
@@ -3,7 +3,7 @@
 }
 
 .chatroom-content {
-    height: calc(100vh - 84px);
+    height: calc(100vh - 85px);
     overflow-y: scroll;
 
     background-color: #9bbbd4;
@@ -12,6 +12,7 @@
 .messages-wrapper {
     display: flex;
     margin-top: 20px;
+    margin-left: 10px;
 }
 
 .messages-wrapper .message.guest {
@@ -24,10 +25,15 @@
     flex-basis: 40px;
     height: 54px;
 
-    margin-right: 10px;
+    margin-right: 5px;
 
     justify-content: center;
     align-items: center;
+}
+
+.messages-wrapper .icon img {
+    width: 40px;
+    border-radius: 10px;
 }
 
 .icon.guest {
@@ -57,6 +63,10 @@
 }
 
 .speech-bubble {
+    margin-left: 10px;
+    margin-right: 10px;
+
+    position: relative;
     border-radius: 15px;
     padding: 10px;
     max-width: calc(100vw - 20%);
@@ -68,7 +78,43 @@
 }
 
 .guest .speech-bubble {
-    margin-right: 10px;
+    margin-right: 20px;
     background-color: #f7e600;
     right: 0;
+}
+
+.messages-wrapper 
+.messages.admin
+.message.admin:first-of-type
+.speech-bubble:after {
+    content: '';
+	position: absolute;
+	left: 0;
+	top: 50%;
+	width: 0;
+	height: 0;
+	border: 10px solid transparent;
+	border-right-color: white;
+	border-left: 0;
+	border-top: 0;
+	margin-top: -5px;
+	margin-left: -10px;
+}
+
+.messages-wrapper 
+.messages.guest
+.message.guest:last-of-type
+.speech-bubble:after {
+	content: '';
+	position: absolute;
+	right: 0;
+	top: 50%;
+	width: 0;
+	height: 0;
+	border: 10px solid transparent;
+    border-left-color: #f7e600;
+	border-right: 0;
+	border-bottom: 0;
+	margin-top: -5px;
+	margin-right: -10px;
 }
